Domino Lable and Domino Table visual demo done. prominic/Moonshine-IDE#646

--- a/src/view/ComponentsOrganizer.mxml
+++ b/src/view/ComponentsOrganizer.mxml
@@ -16,6 +16,7 @@
 			import mx.core.IVisualElementContainer;
 			import mx.events.FlexEvent;
 			import mx.events.ListEvent;
+			import mx.controls.Alert;
 			
 			import spark.components.Image;
 			
@@ -419,6 +420,7 @@
 						}
 						var domino_element:IDominoSurfaceComponent;
 						var primeface_element:IPrimeFacesSurfaceComponent;
+
 
 						if(editingSurface.isVisualEditorDomino){
 							domino_element = element as IDominoSurfaceComponent;
