Fix the form name incorrect prominic/Moonshine-IDE#646

--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -162,10 +162,10 @@
 			 * Only domino project will call this method ,this will keep old method work fine.
 			 *
 			 */
-			public function toDominoCode():XML
+			public function toDominoCode(projectName:String):XML
 			{
 				_isDominoProject = true ;
-				return EditingSurfaceWriter.toDominoCode(this);
+				return EditingSurfaceWriter.toDominoCode(this,projectName);
 			}
 			
 		}
