- Input restriction to primary name fields - null value fix in generated XML - Added validator to domino main form - Replaced checkboxes with radios - Save and Generate is now unique button - Double-click grid item to edit - Formula field's required state handling - Formula field replaced with TextArea and fixed-sized font - Added save handler while save request during Moonshine tab close (reference prominic/Moonshine-IDE#670)

--- a/src/view/tabularInterface/DominoTabularForm.mxml
+++ b/src/view/tabularInterface/DominoTabularForm.mxml
@@ -16,6 +16,11 @@
 				MoonshineBridgeUtils.moonshineBridgeTabularInterface = value;
 			}
 			
+			public function save():void
+			{
+				formDescriptor.saveDominoForm();
+			}
+			
 			public function dispose():void
 			{
 				MoonshineBridgeUtils.moonshineBridgeTabularInterface = null;
