--- a/src/view/tabularInterface/FormFieldDescriptor.mxml
+++ b/src/view/tabularInterface/FormFieldDescriptor.mxml
@@ -16,6 +16,8 @@
 			import mx.utils.ObjectUtil;
 			import mx.validators.Validator;
 			
+			import spark.events.IndexChangeEvent;
+			
 			import skins.StackedFormItemSkin;
 			import skins.TextInputSkin;
 			
@@ -56,6 +58,7 @@
 					ddlType.selectedItem = dominoFormField.type;
 					ddlEditable.selectedItem = dominoFormField.editable;
 					ddlSort.selectedItem = dominoFormField.sortOption;
+					updateFormulaState();
 				}
 				else
 				{
@@ -85,12 +88,21 @@
 			private function validateThis():Boolean
 			{
 				var tmpArr : Array = new Array(svName);
+				if (dominoFormField.editable == TabularEditableType.EDITABLE)
+				{
+					tmpArr.push(svFormula);
+				}
 				if (Validator.validateAll(tmpArr).length != 0) 
 				{
 					return false;
 				}
 				
 				return true;
+			}
+			
+			private function updateFormulaState():void
+			{
+				fiFormula.required = (dominoFormField.editable != TabularEditableType.EDITABLE);
 			}
 			
 		]]>
@@ -108,6 +120,9 @@
 			<fx:String>Categorized(Descending)</fx:String>
 		</s:ArrayList>
 		<mx:StringValidator id="svName" source="{txtName}" property="text"/>
+		<mx:StringValidator id="svFormula" source="{textFormula}" property="text"/>
+		<s:RadioButtonGroup id="rbgMultivalue" selectedValue="@{dominoFormField.isMultiValue}"/>
+		<s:RadioButtonGroup id="rbgInclude" selectedValue="@{dominoFormField.isIncludeInView}"/>
 	</fx:Declarations>
 	<s:Rect left="0" right="0" top="0" bottom="0">
 		<s:fill>
@@ -126,7 +141,7 @@
 						<s:TextInput id="txtName"
 									 width="100%"
 									 skinClass="skins.TextInputSkin" prompt="Item name"
-									 text="@{dominoFormField.name}"/>
+									 text="@{dominoFormField.name}" restrict="0-9A-Za-z_"/>
 					</s:FormItem>
 					<s:FormItem label="Label" 
 								skinClass="skins.StackedFormItemSkin" width="100%">
@@ -145,38 +160,40 @@
 					<s:FormItem label="Type" 
 								skinClass="skins.StackedFormItemSkin" width="100%">
 						<s:DropDownList id="ddlType" width="100%" height="30"
-										dataProvider="{TabularFieldType.FIELD_TYPES}" 
+										dataProvider="{TabularFieldType.fieldTypes}" 
 										requireSelection="true" 
 										change="{dominoFormField.type=event.target.selectedItem}"/>
 					</s:FormItem>
 					<s:FormItem label="Multivalue" 
-								skinClass="skins.FormItemSkin" width="100%">
-						<s:CheckBox id="cbMultivalue"
-									selected="@{dominoFormField.isMultiValue}"/>
+								skinClass="skins.StackedFormItemSkin" width="100%">
+						<s:HGroup width="100%" verticalAlign="middle">
+							<s:RadioButton label="Yes" value="true" group="{rbgMultivalue}"/>
+							<s:RadioButton label="No" value="false" group="{rbgMultivalue}"/>
+						</s:HGroup>
 					</s:FormItem>
-					<s:Spacer height="1"/>
 					<s:FormItem label="Editable" 
 								skinClass="skins.StackedFormItemSkin" width="100%">
 						<s:DropDownList id="ddlEditable" width="100%" height="30"
-										dataProvider="{TabularEditableType.EDITABLE_TYPES}"
+										dataProvider="{TabularEditableType.editableTypes}"
 										requireSelection="true"
-										change="{dominoFormField.editable=event.target.selectedItem}"/>
+										change="{dominoFormField.editable=event.target.selectedItem;updateFormulaState()}"/>
 					</s:FormItem>
-					<s:FormItem label="Formula" 
-								skinClass="skins.StackedFormItemSkin" width="100%">
-						<s:TextInput id="textFormula"
-									 width="100%"
-									 skinClass="skins.TextInputSkin" prompt="Enter formula"
-									 text="@{dominoFormField.formula}"/>
+					<s:FormItem id="fiFormula" 
+								label="Formula" skinClass="skins.StackedFormItemSkin" width="100%">
+						<s:TextArea id="textFormula"
+									width="100%" heightInLines="3" prompt="Enter formula"
+									styleName="fixedWidthTexts"
+									text="@{dominoFormField.formula}"/>
 					</s:FormItem>
 					<s:Spacer height="10"/>
 					<s:FormHeading label="View Options"/>
 					<s:FormItem label="Include in View" 
-								skinClass="skins.FormItemSkin" width="100%">
-						<s:CheckBox id="cbInclude"
-									selected="@{dominoFormField.isIncludeInView}"/>
+								skinClass="skins.StackedFormItemSkin" width="100%">
+						<s:HGroup width="100%" verticalAlign="middle">
+							<s:RadioButton label="Yes" value="true" group="{rbgInclude}"/>
+							<s:RadioButton label="No" value="false" group="{rbgInclude}"/>
+						</s:HGroup>
 					</s:FormItem>
-					<s:Spacer height="1"/>
 					<s:FormItem label="Sorting" 
 								skinClass="skins.StackedFormItemSkin" width="100%">
 						<s:DropDownList id="ddlSort" width="100%" height="30"
