--- a/src/view/dominoFormBuilder/FormFieldDescriptor.mxml
+++ b/src/view/dominoFormBuilder/FormFieldDescriptor.mxml
@@ -13,6 +13,7 @@
 			
 			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
+			import mx.events.ValidationResultEvent;
 			import mx.utils.ObjectUtil;
 			import mx.validators.Validator;
 			
@@ -21,10 +22,10 @@
 			import skins.StackedFormItemSkin;
 			import skins.TextInputSkin;
 			
-			import view.suportClasses.events.ItemEditedEvent;
 			import view.dominoFormBuilder.vo.DominoFormFieldVO;
 			import view.dominoFormBuilder.vo.FormBuilderEditableType;
 			import view.dominoFormBuilder.vo.FormBuilderFieldType;
+			import view.suportClasses.events.ItemEditedEvent;
 			
 			[Bindable] protected var dominoFormField:DominoFormFieldVO;
 			
@@ -43,6 +44,7 @@
 				else
 				{
 					dominoFormField = new DominoFormFieldVO();
+					dominoFormField.sortOption = sortOptions.getItemAt(0) as String;
 				}
 			}
 			
@@ -102,7 +104,14 @@
 			
 			private function updateFormulaState():void
 			{
-				fiFormula.required = (dominoFormField.editable != FormBuilderEditableType.EDITABLE);
+				svFormula.required = fiFormula.required = 
+					(dominoFormField.editable == FormBuilderEditableType.EDITABLE);
+				if (!fiFormula.required)
+				{
+					// remove validation error tip
+					var tmpValidation:ValidationResultEvent = new ValidationResultEvent(ValidationResultEvent.VALID);
+					svFormula.dispatchEvent(tmpValidation);
+				}
 			}
 			
 		]]>
